# devreel

./: .gitignore  README.md  next.config.ts  package.json
src/: App.tsx  index.html  package.json  styles.css  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/encoder/: ffmpeg.rs  mod.rs
src-tauri/src/recorder/: audio.rs  mod.rs  screen.rs
src/app/: page.tsx
src/components/: CaptionOverlay.tsx  CodeBlock.tsx  FFmpegLoader.tsx  Preview.tsx  SidePanel.tsx  Sidebar.tsx  Timeline.tsx  Whiteboard.tsx
src/context/: RecorderContext.tsx
src/hooks/: useFFmpeg.ts  useRecorder.ts  useSpeech.ts
src/store/: index.ts
